modified:   src/layouts/Footer.astro 	modified:   src/layouts/Header.astro 	modified:   src/pages/index.astro 	modified:   src/pages/kontakt.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const aboutFeatures = [
                 ))}
             </div>
             <div class="text-center">
-                <Button href="/o-nas" variant="secondary">Poznejte nás blíže</Button>
+                <Button href="/o-nas">Zjistit více o nás</Button>
             </div>
         </div>
     </section>
@@ -68,7 +68,7 @@ const aboutFeatures = [
                 </li>
             </ul>
             <div class="text-center mt-8">
-                <Button href="/sluzby" variant="secondary">Všechny služby</Button>
+                <Button href="/sluzby">Prozkoumat všechny služby</Button>
             </div>
         </div>
     </section>
