--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -24,8 +24,8 @@
             <div class="footer-section">
                 <h3 class="text-lg font-bold mb-4">Newsletter</h3>
                 <form class="newsletter-form space-y-2">
-                    <input type="email" placeholder="Váš e-mail" required class="w-full p-2 bg-transparent border border-white rounded text-white placeholder-gray-300">
-                    <button type="submit" class="w-full p-2 bg-white text-black rounded hover:bg-gray-200 transition-colors duration-300">Odebírat</button>
+                    <input type="email" placeholder="Váš e-mail" required class="w-full p-2 bg-transparent border border-white rounded-full text-white placeholder-gray-300">
+                    <button type="submit" class="w-full p-2 bg-white text-black rounded-full hover:bg-gray-200 transition-colors duration-300">Odebírat</button>
                 </form>
             </div>
         </div>
