--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,4 +1,5 @@
 ---
+import Button from '../components/Button.astro';
 ---
 <footer class="bg-transparent text-white py-8 md:py-12">
     <div class="container mx-auto px-6">
@@ -25,7 +26,7 @@
                 <h3 class="text-lg font-bold mb-4">Newsletter</h3>
                 <form class="newsletter-form space-y-2">
                     <input type="email" placeholder="Váš e-mail" required class="w-full p-2 bg-transparent border border-white rounded-full text-white placeholder-gray-300">
-                    <button type="submit" class="w-full p-2 bg-white text-black rounded-full hover:bg-gray-200 transition-colors duration-300">Odebírat</button>
+                    <Button type="submit" class="w-full">Odebírat</Button>
                 </form>
             </div>
         </div>
