--- a/src/pages/sluzby.astro
+++ b/src/pages/sluzby.astro
@@ -66,7 +66,7 @@ const processSteps = [
                     </div>
                 </div>
                 <div class="mt-4 flex justify-center">
-                    <Button href="#" variant="secondary" class="w-3/4 text-white bg-white bg-opacity-20 hover:bg-opacity-30">Zjistit více</Button>
+                    <Button href="/kontakt" variant="secondary" class="w-3/4 text-white bg-white bg-opacity-20 hover:bg-opacity-30">Zjistit více</Button>
                 </div>
             </div>
         ))}
